--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a00-ronitr21/issues"
   },
-  "homepage": "https://github.com/comp426-2022-spring/a00-ronitr21#readme"
+  "homepage": "https://github.com/comp426-2022-spring/a00-ronitr21#readme",
+  "dependencies": {
+    "browser-sync": "^2.27.9"
+  }
 }
